--- a/DriveFast/DriveFast/DriveFast.csproj
+++ b/DriveFast/DriveFast/DriveFast.csproj
@@ -107,9 +107,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Banana.cs" />
-    <Compile Include="Durian.cs" />
+    <Compile Include="Apple.cs" />
     <Compile Include="Hazard.cs" />
+    <Compile Include="pineapple.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
